# Luminous

./: .env.example  .gitignore  PLAN_statistics.md  PLAN_statistics_addendum.md  PLAN_v2.md  advanced-protein-viz-research.md  app.py  bio_ai_landscape_2025_2026.md  deploy_modal.py  graphpad-prism-features.md  protein-animation-research.md  pyproject.toml  requirements.txt  start.sh  user-pain-research.md
.streamlit/: config.toml
assets/: dna_lottie.json  report_template.html  style.css
components/: affinity_panel.py  alphafold_compare.py  chat_followup.py  comparison_mode.py  confidence_heatmap.py  context_panel.py  disorder_detector.py  drug_resistance.py  electrostatics_viewer.py  empty_state.py  experiment_planner.py  hypothesis_panel.py  insight_visualizations.py  mutation_impact.py  network_graph.py  nivo_dashboard.py  notification_poller.py  pae_viewer.py  pipeline_builder.py  pipeline_flow.py  playground.py  project_manager.py  query_input.py  report_export.py  residue_dashboard.py  sequence_viewer.py  sketch_hypothesis.py  statistics_tab.py  structural_insights.py  structure_viewer.py  tamarind_panel.py  variant_landscape.py  video_panel.py
data/: example_queries.json  known_limitations.json
docs/: LUMINOUS_COMPLETE.md  backend_architecture_execution_plan_2026-04-13.md  backend_architecture_report_2026-04-13.md  backend_architecture_representation_2026-04-13.md  backend_state_retry_walkthrough.md
scripts/: precompute_examples.py  test_apis.py  test_claude_analysis.py  test_full_pipeline.py
src/: alphamissense.py  analysis_session.py  bio_agent.py  (+42 more)
(+90 files in other folders)
